# libmspub

./: .gitignore  .gitreview  AUTHORS  Makefile.am  NEWS  README  autogen.sh  buildnumber.sh  configure.ac  libmspub-0.0.pc.in  libmspub-zip.in  libmspub.pc.in  libmspub.spec.in  project.config  stylize
docs/doxygen/: Makefile.am  doxygen.cfg
inc/: Makefile.am
inc/libmspub/: MSPUBDocument.h  Makefile.am  libmspub.h
src/: Makefile.am
src/conv/: Makefile.am
src/conv/raw/: .gitignore  Makefile.am  pub2raw.cpp  pub2raw.rc.in
src/conv/svg/: .gitignore  Makefile.am  pub2xhtml.cpp  pub2xhtml.rc.in
src/fuzz/: .gitignore  Makefile.am  pubfuzz.cpp  pubfuzzer.cpp
src/lib/: Arrow.h  BorderArtInfo.h  ColorReference.cpp  ColorReference.h  Coordinate.cpp  Coordinate.h  Dash.cpp  Dash.h  EmbeddedFontInfo.h  EscherContainerOffsets.h  EscherContainerType.h  EscherFieldIds.h  Fill.cpp  Fill.h  FillType.h  Line.h  ListInfo.h  MSPUBBlockID.h  MSPUBBlockType.h  MSPUBChunkType.h  MSPUBCollector.cpp  MSPUBCollector.h  MSPUBConstants.h  MSPUBContentChunkType.h  MSPUBDocument.cpp  MSPUBDocument.h  MSPUBInternalStream.cpp  MSPUBInternalStream.h  MSPUBMetaData.cpp  MSPUBMetaData.h  MSPUBParser.cpp  MSPUBParser.h  MSPUBParser2k.cpp  MSPUBParser2k.h  MSPUBParser97.cpp  MSPUBParser97.h  MSPUBSVGGenerator.cpp  MSPUBSVGGenerator.h  MSPUBStringVector.cpp  MSPUBStringVector.h  (+28 more)
